# ByteFrame

./: CMakeLists.txt  README.md  library.json  library.properties  platformio.ini
.github/ISSUE_TEMPLATE/: config.yml
examples/Basic/: Basic.ino
examples/BasicNative/: BasicNative.cpp
examples/ChunkedStream/: ChunkedStream.ino
examples/CrcSelection/: CrcSelection.ino
examples/OneShotDecode/: OneShotDecode.ino
examples/StreamingEncoder/: StreamingEncoder.ino
src/: ByteFrame.h
test/: test_byteframe.cpp
